# division_autoGpt

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW.md  DEV_GUIDE.md  E2E_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  README.md  USER_WORKFLOW.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.sh
.claude/: settings.local.json
.reports/: cleanup-summary.md  codemap-diff.txt  dead-code-analysis.md  pylint-unused.txt  ruff-unused.json
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_session_restore_fields.py  003_add_chapter_versions.py
codemaps/: INDEX.md  architecture.md  backend.md  data.md  frontend.md
docs/: ARCHITECTURE_FLOW.md  COMPLETION_CHECKLIST.md  DELETION_LOG.md  DOCUMENTATION_REPORT.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  README.md  STARTUP_GUIDE.md  TEST_SESSION_START.md  WEBSOCKET_IMPLEMENTATION.md  frontend_spec.md  progressive_writing_plan.md
docs/api/: REST_API.md  WEBSOCKET_API.md
docs/architecture/: CORE_MODULES.md  LONG_NOVEL_SUPPORT.md  MULTI_LLM.md  OVERVIEW.md  PLUGIN_SYSTEM.md
docs/frontend/: COMPONENT_SPEC.md  UI_DESIGN.md
docs/guides/: DEVELOPMENT.md  MULTI_LLM_GUIDE.md  PROMPT_SYSTEM.md  QUICKSTART.md  SESSION_MANAGEMENT.md
frontend/: .env.example  E2E_QUICK_START.md  E2E_TEST_SUMMARY.md  README.md  index.html  package-lock.json  package.json  playwright-results.json  playwright-results.xml  playwright.config.ts  pyproject.toml  tailwind.config.js  vite.config.ts
frontend/e2e/: ARCHITECTURE.md  README.md  full-workflow.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/test-results/: .last-run.json
prompts/base/: constraints.txt  system.txt
prompts/styles/: wuxia.yaml  xuanhuan.yaml  武侠.yaml  玄幻.yaml  科幻.yaml  都市.yaml
prompts/tasks/: 人物设计.jinja2  大纲.jinja2  章节内容.jinja2  章节润色.jinja2  风格元素.jinja2
result/: export.md  improvement_plan.json
result/evaluations/: evaluation_20260126_091203.md  evaluation_20260126_091419.md
scripts/: NOVEL_EVALUATION.md  clean_default_collection.py  e2e_frontend_scifi.js  evaluate_novel.py  init_db.py  novel_evaluator_prompt.md  optimize_prompts.py  quick_test.py  remove_emojis.py  remove_emojis_v2.py  replace_console_log.py  run_server.py  test_llm.py  test_scifi_novel.py  test_system.py
src/creative_autogpt/: __init__.py
test_results/: README.md  scifi_novel_20260124_005427.txt  test_report_20260124_005427.json
tests/core/: test_chapter_rewriter.py  (+1 more)
versions/: 2026-01-26_2261da49fe2f_add_rewrite_state_fields_to_sessions.py
小说/: 2026-1-25.md
(+221 files in other folders)
