[project]
name = "creative-autogpt"
version = "0.1.0"
description = "AI-powered creative writing system specialized for long-form novels"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Creative AutoGPT Team"}
]
keywords = ["ai", "writing", "novel", "autogpt", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "aiofiles>=24.1.0",
    "openai>=1.54.0",
    "dashscope>=1.20.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.23",
    "sentence-transformers>=3.3.1",
    "jinja2>=3.1.4",
    "loguru>=0.7.2",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
    "orjson>=3.10.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.10.0",
    "pylint>=3.3.1",
    "mypy>=1.11.2",
    "ruff>=0.7.1",
    "pre-commit>=4.0.1",
    "types-PyYAML>=6.0.12.20240917",
    "types-aiofiles>=24.1.0.20240626",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/creative_autogpt"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/creative_autogpt --cov-report=html --cov-report=term"
